--- a/.github/workflows/Build_X86_64[immortalwrt].yml
+++ b/.github/workflows/Build_X86_64[immortalwrt].yml
@@ -32,7 +32,7 @@ on:
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt
   REPO_BRANCH: master
-  FEEDS_CONF: feeds_config/feeds.conf.default
+  FEEDS_CONF: feeds_config/immo.feeds.conf.default
   CONFIG_FILE: config/immo_config/x86.config
   DIY_P1_SH: diy_script/immo_diy/x86/diy-part1.sh
   DIY_P2_SH: diy_script/immo_diy/x86/diy-part2.sh
