--- a/.github/workflows/Build_X86_64[firewall4].yml
+++ b/.github/workflows/Build_X86_64[firewall4].yml
@@ -60,20 +60,20 @@ jobs:
       run: |
         git clone --depth 1 $REPO_URL_firewall4 -b $REPO_BRANCH_firewall4 $REPO_PATH_firewall4
         cd $REPO_PATH_firewall4
-        echo "commitHash_x86_64=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+        echo "commitHash_x86_64_firewall4=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
         cd
 
     - name: Show Commit Head and Combination Heads
       id: combHeader
       run: |
-        echo "commitHash_x86_64: ${{ steps.getHash.outputs.commitHash_x86_64 }}"
+        echo "commitHash_x86_64_firewall4: ${{ steps.getHash.outputs.commitHash_x86_64_firewall4 }}"
 
     - name: Compare Commit Hash
       id: cacheHash
       uses: actions/cache@main
       with:
-        path: .commitHash_x86_64
-        key: HEAD-${{ steps.getHash.outputs.commitHash_x86_64 }}
+        path: .commitHash_x86_64_firewall4
+        key: HEAD-${{ steps.getHash.outputs.commitHash_x86_64_firewall4 }}
 
     - name: Set output for next job
       id: outputunifreq
@@ -84,7 +84,7 @@ jobs:
     - name: Save New Commit Hash
       if: steps.cacheHash.outputs.cache-hit != 'true'
       run: |
-        echo ${{ steps.getHash.outputs.commitHash_x86_64 }} | tee .commitHash_x86_64_firewall4
+        echo ${{ steps.getHash.outputs.commitHash_x86_64_firewall4 }} | tee .commitHash_x86_64_firewall4
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
   Build_x86_64_515:
     needs: [Checka]
