--- a/.github/workflows/Build_X86_64[immortalwrt].yml
+++ b/.github/workflows/Build_X86_64[immortalwrt].yml
@@ -10,16 +10,16 @@ on:
   repository_dispatch:
   workflow_dispatch:
     inputs:
-      checkupdates61:
-        description: 'Checkupdates61 connection to Actions'
+      checkupdates515:
+        description: 'Checkupdates515 connection to Actions'
         required: false
         default: 'false'
       checkupdates66:
         description: 'Checkupdates66 connection to Actions'
         required: false
         default: 'false'
-      ssh61:
-        description: 'SSH61 connection to Actions'
+      ssh515:
+        description: 'SSH515 connection to Actions'
         required: false
         default: 'false'
       ssh66:
@@ -34,6 +34,7 @@ env:
   REPO_BRANCH: master
   FEEDS_CONF: feeds_config/immo.feeds.conf.default
   CONFIG_FILE: config/immo_config/x86.config
+  CONFIG_FILE515: config/immo_config/x86-5.15.config
   DIY_P1_SH: diy_script/immo_diy/x86/diy-part1.sh
   DIY_P2_SH: diy_script/immo_diy/x86/diy-part2.sh
   CLASH_KERNEL: amd64
@@ -83,9 +84,9 @@ jobs:
       run: |
         echo ${{ steps.getHash.outputs.commitHash_x86_64_immo }} | tee .commitHash_x86_64_immo
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
-  Build_x86_64_61:
+  Build_x86_64_515:
     needs: [Checka]
-    if: ${{ needs.Checka.outputs.output != 'hello' || github.event.inputs.checkupdates61 == 'true'}}
+    if: ${{ needs.Checka.outputs.output != 'hello' || github.event.inputs.checkupdates515 == 'true'}}
     runs-on: ubuntu-22.04
 
     steps:
@@ -187,7 +188,7 @@ jobs:
     - name: Load custom configuration
       run: |
         [ -e files ] && mv files openwrt/files
-        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        [ -e $CONFIG_FILE515 ] && mv $CONFIG_FILE openwrt/.config
         chmod +x $GITHUB_WORKSPACE/diy_script/*.sh
         chmod +x $DIY_P2_SH
         cd openwrt
@@ -195,9 +196,9 @@ jobs:
         $GITHUB_WORKSPACE/diy_script/preset-clash-core.sh $CLASH_KERNEL
         $GITHUB_WORKSPACE/diy_script/preset-adguard-core.sh $CLASH_KERNEL
         
-        #sed -i 's/CONFIG_LINUX.*/CONFIG_LINUX_6_1=y/g' .config
+        #sed -i 's/CONFIG_LINUX.*/CONFIG_LINUX_5_15=y/g' .config
         
-        sed -i 's/KERNEL_PATCHVER:=*.*/KERNEL_PATCHVER:=6.1/g' target/linux/x86/Makefile
+        sed -i 's/KERNEL_PATCHVER:=*.*/KERNEL_PATCHVER:=5.15/g' target/linux/x86/Makefile
         
         #sed -i 's/KERNEL_TESTING_PATCHVER:=*.*/KERNEL_TESTING_PATCHVER:=5.15/g' target/linux/x86/Makefile
         
