--- a/config/immo_config/x86.config
+++ b/config/immo_config/x86.config
@@ -6178,7 +6178,7 @@ CONFIG_PACKAGE_luci-app-mihomo=y
 # CONFIG_PACKAGE_luci-app-mjpg-streamer is not set
 # CONFIG_PACKAGE_luci-app-modemband is not set
 CONFIG_PACKAGE_luci-app-mosdns=y
-CONFIG_PACKAGE_luci-app-msd_lite=y
+# CONFIG_PACKAGE_luci-app-msd_lite is not set
 # CONFIG_PACKAGE_luci-app-music-remote-center is not set
 CONFIG_PACKAGE_luci-app-mwan3=y
 # CONFIG_PACKAGE_luci-app-mwol is not set
@@ -6200,7 +6200,7 @@ CONFIG_PACKAGE_luci-app-oaf=y
 # CONFIG_PACKAGE_luci-app-olsr-services is not set
 # CONFIG_PACKAGE_luci-app-olsr-viz is not set
 # CONFIG_PACKAGE_luci-app-olsrd2 is not set
-CONFIG_PACKAGE_luci-app-omcproxy=y
+# CONFIG_PACKAGE_luci-app-omcproxy is not set
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_iptables-mod-tproxy=y
 # CONFIG_PACKAGE_iptables-mod-extra is not set
@@ -6240,11 +6240,12 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 
 # CONFIG_PACKAGE_luci-app-pbr is not set
 # CONFIG_PACKAGE_luci-app-polipo is not set
-CONFIG_PACKAGE_luci-app-poweroff=y
+# CONFIG_PACKAGE_luci-app-poweroff is not set
 # CONFIG_PACKAGE_luci-app-pppoe-relay is not set
 # CONFIG_PACKAGE_luci-app-pppoe-server is not set
 # CONFIG_PACKAGE_luci-app-privoxy is not set
 # CONFIG_PACKAGE_luci-app-ps3netsrv is not set
+CONFIG_PACKAGE_luci-app-pushbot=y
 # CONFIG_PACKAGE_luci-app-qbittorrent is not set
 # CONFIG_PACKAGE_luci-app-qos is not set
 # CONFIG_PACKAGE_luci-app-radicale is not set
@@ -6692,7 +6693,6 @@ CONFIG_PACKAGE_luci-i18n-ipsec-vpnd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-lucky-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mihomo-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mosdns-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-msd_lite-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-mwan3-ar is not set
 # CONFIG_PACKAGE_luci-i18n-mwan3-bg is not set
 # CONFIG_PACKAGE_luci-i18n-mwan3-bn is not set
@@ -6766,40 +6766,6 @@ CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-nps-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-oaf-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-omcproxy-ar is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-bg is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-bn is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-ca is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-cs is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-da is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-de is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-el is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-es is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-fi is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-fr is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-he is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-hi is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-hu is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-it is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-ja is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-ko is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-lt is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-mr is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-ms is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-nl is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-no is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-pl is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-pt is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-pt-br is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-ro is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-ru is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-sk is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-sv is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-tr is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-uk is not set
-# CONFIG_PACKAGE_luci-i18n-omcproxy-vi is not set
-CONFIG_PACKAGE_luci-i18n-omcproxy-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-omcproxy-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-opkg-ar is not set
 # CONFIG_PACKAGE_luci-i18n-opkg-bg is not set
@@ -8278,7 +8244,7 @@ CONFIG_PACKAGE_ipset=y
 # CONFIG_PACKAGE_ipset-lists is not set
 CONFIG_PACKAGE_ipt2socks=y
 # CONFIG_PACKAGE_iptraf-ng is not set
-# CONFIG_PACKAGE_iputils-arping is not set
+CONFIG_PACKAGE_iputils-arping=y
 # CONFIG_PACKAGE_iputils-clockdiff is not set
 CONFIG_PACKAGE_iputils-ping=y
 # CONFIG_PING_LEGACY_SYMLINKS is not set
@@ -9173,7 +9139,7 @@ CONFIG_PACKAGE_gawk=y
 # CONFIG_PACKAGE_iwcap is not set
 CONFIG_PACKAGE_iwinfo=y
 # CONFIG_PACKAGE_joker is not set
-# CONFIG_PACKAGE_jq is not set
+CONFIG_PACKAGE_jq=y
 CONFIG_PACKAGE_jshn=y
 # CONFIG_PACKAGE_kdump is not set
 # CONFIG_PACKAGE_kexec is not set
