--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -150,9 +150,17 @@ jobs:
         tag: ${{ env.PRODUCT_NAME }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - 🔴默认 IP：192.168.8.8 默认密码：password
-          - 🔴WiFi默认密码：password
-          - 🔥此为 ARMv8-Docker 固件，集成一些日常常用插件
+          **This is OpenWrt Firmware for ${{ env.FILE_NAME }}**
+          ### 📒 固件信息
+          - 🔥 此为 ARMv8-Docker 固件，集成一些日常常用插件
+          - 💻 平台架构: ${{ env.FILE_NAME }}
+          - ⚽ 固件源码: ${{ env.REPO_URL }}
+          - 💝 源码分支: ${{ env.REPO_BRANCH }}
+          - 🚀 内核版本: ${{ env.KERNEL }}
+          - 🌐 默认地址：192.168.8.8
+          - 🔑 默认密码：password
+          - 🔴 WiFi默认密码：password
+          ### 🧊 固件版本
           - 安装到 EMMC：系统 → 晶晨宝盒 → 安装 OpenWrt → 选择型号 → 安装
           - 升级 OpenWrt：系统 → 晶晨宝盒 → 手动上传更新 或者 在线下载更新
           - 常见问题及注意事项请参考恩山F大➦[最新帖](https://www.right.com.cn/forum/thread-4076037-1-1.html)
