--- a/.github/workflows/Build_ARMv8.yml
+++ b/.github/workflows/Build_ARMv8.yml
@@ -105,20 +105,19 @@ jobs:
     - name: Check server configuration
       run: |
         echo "警告⚠"
-        echo "若分配的服务器性能不足，务必及时取消，重新运行！"
-        echo "已知编译成功CPU型号：8370C,8272CL"
-        echo "已知性能不足CPU型号：8171M"
-        echo -e "-------------- ------------CPU信息------------------------------------------\n"
+        echo "分配的服务器性能有限，若选择的插件过多，务必注意CPU性能！"
+        echo -e "已知CPU型号(降序): 7763，8370C，8272CL，8171M，E5-2673 \n"
+        echo -e "-------------- ------------CPU信息------------------------------------------"
         echo "CPU物理数量:$(cat /proc/cpuinfo| grep "physical id"| sort| uniq| wc -l)"
+        echo "CPU线程数量: $(nproc)"
         echo -e "CPU核心及版本信息：$(cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c) \n"
         echo "-------------------------------内存信息-------------------------------------------"
         echo "已安装内存详细信息："
-        sudo lshw -short -C memory | grep GiB
-        echo -e "\n"
+        echo -e "$(sudo lshw -short -C memory | grep GiB) \n"
         echo "-----------------------------硬盘信息---------------------------------------------"
-        echo -e  "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l) \n"
+        echo -e  "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l)"
         echo "硬盘详情："
-        echo " 系统空间       类型    总数  已用 可用  使用率"
+        echo "系统空间        类型   总数  已用  可用  使用率"
         df -Th
 
     - name: Initialization environment
@@ -215,7 +214,7 @@ jobs:
     - name: Output compilation information
       run: |
         cd openwrt
-        echo " 系统空间       类型  总数  已用  可用  使用率"
+        echo "系统空间        类型  总数  已用  可用  使用率"
         df -hT $PWD
         echo
         echo "=========================================="
@@ -266,7 +265,7 @@ jobs:
         echo "=========================================="
         echo "----------------空间使用-------------------"
         echo "=========================================="
-        echo " 系统空间      类型   总数  已用  可用 使用率"
+        echo "系统空间       类型   总数  已用  可用 使用率"
         df -hT
         echo "=========================================="
         du -h --max-depth=1 openwrt/ --exclude=build_dir --exclude=bin
@@ -324,7 +323,13 @@ jobs:
         tag: ${{ env.FILE_NAME }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - 🔴此为 ARMv8 底包，非完整固件，不可直刷
+          **This is OpenWrt Firmware for ${{ env.FILE_NAME }}**
+          ### 📒 固件信息
+          - 🔴 此为 ARMv8 底包，非完整固件，不可直刷
+          - 💻 平台架构: ${{ env.FILE_NAME }}
+          - ⚽ 固件源码: ${{ env.REPO_URL }}
+          - 💝 源码分支: ${{ env.REPO_BRANCH }}
+          ### 🧊 固件版本
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           - ★ 感谢源码作者无私分享！
           - 🎈🎈🎈 更新信息 🎈🎈🎈
@@ -455,9 +460,16 @@ jobs:
         tag: ${{ env.PRODUCT_NAME }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - 🔴默认 IP：192.168.8.8 默认密码：password
-          - 🔴WiFi默认密码：password
-          - 🔥此为 ARMv8-Docker 固件，集成一些日常常用插件
+          **This is OpenWrt Firmware for ${{ env.FILE_NAME }}**
+          ### 📒 固件信息
+          - 🔥 此为 ARMv8-Docker 固件，集成一些日常常用插件
+          - 💻 平台架构: ${{ env.FILE_NAME }}
+          - ⚽ 固件源码: ${{ env.REPO_URL }}
+          - 💝 源码分支: ${{ env.REPO_BRANCH }}
+          - 🌐 默认地址：192.168.8.8
+          - 🔑 默认密码：password
+          - 🔴 WiFi默认密码：password
+          ### 🧊 固件版本
           - 安装到 EMMC：系统 → 晶晨宝盒 → 安装 OpenWrt → 选择型号 → 安装
           - 升级 OpenWrt：系统 → 晶晨宝盒 → 手动上传更新 或者 在线下载更新
           - 常见问题及注意事项请参考恩山F大➦[最新帖](https://www.right.com.cn/forum/thread-4076037-1-1.html)
